<resources>
    <string name="app_name">SnapTaPlaque</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="connection_message">Unable to connect to the server. Please check your connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="title_history">Search History</string>
    <string name="title_search">Search</string>
    <string name="number_plate">Number plate</string>
    <string name="spell_plate">Spell out the number plate</string>
    <string name="micro_not_available">Microphone not available</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite Vehicles</string>
    <string name="edit_photo">Edit the photo</string>
    <string name="camera_choice">Take a photo</string>
    <string name="gallery_choice">Select from the gallery</string>
    <string name="necessary_camera">The camera is needed to take a photo</string>
    <string name="necessary_gps">The GPS is needed to see your location</string>
    <string name="country">United States</string>
    <string name="bnt_search_other">Search another vehicle</string>
    <string name="hint_immatriculation">License Plate Number</string>
    <string name="placeholder_make_model">Make Model Trim Engine ...</string>
    <string name="nav_history">History</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="iv_favorite">Favorite</string>
    <string name="join_us">Join us !</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome back !</string>
    <string name="accept_privacy_policy">Accept privacy policy</string>
    <string name="picture_btn">Picture</string>
    <string name="close">Close</string>
    <string name="take_picture">Take a picture</string>
    <string name="item_vehicle_description">Brand logo</string>
    <string name="describe_trace_title">Tire trace</string>
    <string name="description_indicator_scan">Indicator scan</string>
    <string name="tiret">-</string>
    <string name="searchInputHistory" type="id">Find a plate or a model...</string>
    <string name="enter_plate_number">Please enter a plate number</string>
    <string name="field_required">All field required</string>
    <string name="validate_plate">The plate is valid</string>
    <string name="unvalidate_plate">The plate is not valid</string>
    <string name="launch_error_title">Service unavailable</string>
    <string name="launch_error_message">Unable to connect to the server. Please check your connection and try again.</string>
    <string name="launch_error_retry">Retry</string>
    <string name="launch_error_exit">Exit</string>
    <string name="logout_success">"Log out successfully "</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="model_type">"Type : "</string>
    <string name="pipeline">"Pipeline : "</string>
    <string name="is_loaded">"Model loaded : "</string>
    <string name="rgpd_controller">"Controller : "</string>
    <string name="rgpd_contact">"Contact : "</string>
    <string name="rgpd_purpose">"Purpose : "</string>
    <string name="rgpd_legal_basis">"Legal basis : "</string>
    <string name="rgpd_data_collected">"Data collected : "</string>
    <string name="rgpd_retention_period">"Retention period : "</string>
    <string name="rgpd_user_rights">"User rights : "</string>
    <string name="rgpd_data_sharing">"Data sharing : "</string>
    <string name="rgpd_security_measures">"Security measures : "</string>
    <string name="compliance_plate">The license plate is not compliant ❌</string>
    <string name="existence_plate">The license plate does not exist</string>
    <string name="detection_plate">No license plate detected</string>
    <string name="research_in_progress">Research in progress...</string>
    <string name="delete_account">delete your account</string>
    <string name="model_info">API model Information  :</string>
    <string name="api_version">"API globals informations : "</string>
    <string name="export_data">export your data on your device</string>
    <string name="data_export_info">Export all your data know by the API :</string>
    <string name="delete_account_info">"Permatly delete all your data from API database : "</string>
    <string name="delete_account_successful">delete your account successfuly</string>
    <string name="api_version_result_version">"Version : "</string>
    <string name="api_version_result_statut">"Statut : "</string>
    <string name="api_version_result_pipeline">"Pipeline version : "</string>
    <string name="api_version_response_latest">"Latest version : "</string>
    <string name="description_indicator_wheel">Indicator Wheel</string>
    <string name="description_indicator_vocal">Indicator vocal</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>