<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_height="100dp"
            android:layout_width="140dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/containerRegister"
            android:layout_marginBottom="24dp" android:layout_marginTop="24dp"/>

    <LinearLayout
            android:id="@+id/containerRegister"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/cadre_formulaire"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            android:layout_width="wrap_content" android:layout_height="520dp"
            app:layout_constraintBottom_toTopOf="@id/privacyPolicyLink" android:layout_marginBottom="32dp">

        <TextView
                android:id="@+id/rejoignez_nous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/join_us"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#3F51B5">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputIdentifiant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:boxBackgroundColor="#F2F2F2"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMotDePasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/buttonRGPD"
                android:layout_width="322dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/accept_privacy_policy"
                android:textColor="@color/white"
                android:textColorLink="@color/red" app:thumbTint="@color/red"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/buttonInscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:backgroundTint="@color/red"
                    app:cornerRadius="15dp"/>

            <Button
                    android:id="@+id/buttonConnexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:backgroundTint="@color/red"
                    app:cornerRadius="15dp"/>

        </LinearLayout>

    </LinearLayout>
    <TextView
            android:id="@+id/privacyPolicyLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/containerRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>