<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.85">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="483dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tvExportData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/data_export_info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btnDataExport"
                    android:layout_width="218dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="30dp"
                    android:text="@string/export_data"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/red" />

                <TextView
                    android:id="@+id/tvDataExportResponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#444444"
                    android:textSize="14sp" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:background="@color/red" />


                <TextView
                    android:id="@+id/tvApiVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/api_version"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvApiVersionResponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#444444"
                    android:textSize="14sp" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:background="@color/red" />


                <TextView
                    android:id="@+id/tvModelInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/model_info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvModelInfoResponse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#444444"
                    android:textSize="14sp" />

                <View
                    android:layout_width="60dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:background="@color/red" />

                <TextView
                    android:id="@+id/tvDeleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/delete_account_info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/btnDeleteAccount"
                    android:layout_width="218dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="30dp"
                    android:text="@string/delete_account"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:backgroundTint="@color/red" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="60dp"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="normal"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardContainer"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>