<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnPicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/picture_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.6"/>

    <ImageView
        android:id="@+id/ivLicencePlate"
        android:layout_width="325dp"
        android:layout_height="338dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPicture"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"
        android:contentDescription="@string/take_picture"/>

    <TextView
        android:id="@+id/showPlate"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="524dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:minHeight="60dp"
        android:text="@string/search"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.6"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>